changed div to h1

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="mainHeader">
-           <div class="nameLogo">Brad Fabian</div> 
+           <h1 class="nameLogo">Brad Fabian</h1> 
             <a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a> 
         </header>
         <div>
