--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,20 @@
     </head>
     <body>
         <header class="mainHeader">
-           <div class="nameLogo">Brad Fabian</div> 
+           <h1 class="nameLogo">Brad Fabian</h1> 
             <a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a> 
         </header>
         <div>
                 <h1>Portfolio</h1>
                     <p>
+                        <ul>
+                            <li>Music Website</li>
+                            <li>Food Truck App</li>
+                            <li>Elephant Tracker</li>
+                            <li>Photographic Website</li>
+                            <li>Platformer</li>
+                        </ul>
+
 
                      </p>
 
