--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>Basic Bio</title>
-        <!--Reference css-->
-        <Link rel="stylesheet" type="text/css" href="assets\css\style.css">
-    </head>
-    <body>
-        <div class="container">
-        <header class="mainHeader">
-           <h1 class="nameLogo">Brad Fabian</h1> 
-            <a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a> 
-        </header>
-            <div>
-                <p>
-                    <h1>About Me</h1>
-                    <img src="https://picsum.photos/150" alt="Picture of Brad" align="left"/>
-                        To your stations! Come with me. Close all outboard shields! Close 
-                        all outboard shields! Yes. 
-                        We've captured a freighter entering the remains of the Alderaan system. 
-                        It's markings match those of a ship that blasted its way out of Mos Eisley. They must be trying to 
-                        return the stolen plans to the princess. She may yet be of some use to us. Unlock one-five-seven and nine. 
-                        Release charges. There's no one on board, sir. According to the log, the crew abandoned ship right 
-                        after takeoff. It must be a decoy, sir. Several of the escape pods have been jettisoned.
-                        We don't serve their kind here! What? Your droids. They'll have to wait outside. We don't want them here. 
-                        Listen, why don't you wait out by the speeder. We don't want any trouble. I heartily agree with you sir.
-                        Negola dewaghi wooldugger?!? He doesn't like you. I'm sorry. I don't like you either You just watch 
-                        yourself. We're wanted men. I have the death sentence in twelve systems. I'll be careful than.
-                        You'll be dead. This little one isn't worth the effort. Come let me buy you something...
-                        Someone was in the pod. The tracks go off in this direction. Look, sir -- droids.
-                        I can't abide these Jawas. Disgusting creatures. Go on, go on. I can't understand how we 
-                        got by those troopers. I thought we were dead. The Force can have a strong influence on the weak-minded.
-                         You will find it a powerful ally. Do you really think we're going to find a pilot here that'll take us 
-                         to Alderaan? Well, most of the best freighter pilots can be found here. Only watch your step. This place 
-                         can be a little rough. I'm ready for anything. Come along, Artoo.
-                        What? Yahoo! Look out! You're all clear, kid. Now let's blow this thing and go home! Stand by to fire at
-                         Rebel base. Standing by. Great shot, kid. That was one in a million. Remember, the Force will be with you...always.
+<!doctype html>
+<html lang="en-us">
 
-                 </p>
+<head>
+  <meta charset="UTF-8">
+  <title>About | Brad Fabian</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-            </div>
-        </div>
-        <footer>
-            <p>copywrite</p>
-        </footer>
+<body>
 
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Brad Fabian</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-        
-    </body>
-</html> 
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+
+      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+
+      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
+
+</html>
+
