--- a/portfolio.html
+++ b/portfolio.html
@@ -35,18 +35,18 @@
 
         <h3>RPG Game</h3>
       </div>
-      <div class="work">
+      <div class="work2">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game" height="100px" width="100px">
 
         <h3>Trivia Game</h3>
       </div>
-      <div class="work">
+      <div class="work2">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget" height="100px" width="100px">
 
         <h3>Rutgers Info Widget</h3>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors" height="100px" width="100px">
+      <div class="work3">
+        <img src="assets/images/rockPaperscissors.jpg" alt="Rock Paper Scissors" height="100px" width="100px">
 
         <h3>Rock Paper Scissors</h3>
       </div>
